--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,7 @@
  html, body {
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 
 .container {
@@ -28,9 +29,9 @@
 }
 
 .jumbotron {
-  height: 800px;
+  height: 600px;
   background-image: url("https://content.codecademy.com/projects/broadway/bg.jpg?_gl=1*my95t4*_ga*MzM3ODgyMzI5My4xNjc1NDUyNTk4*_ga_3LRZM6TM9L*MTY3Nzc3MzY5OS4xNi4xLjE2Nzc3NzY2NTEuNjAuMC4w");
-
+background-size: fill;
 }
 
 .btn-primary {
@@ -61,8 +62,9 @@ margin-bottom: 20px;
   color: #fff;
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
-  font-size: 12px;
+  font-size: 20px;
   display: inline;
+  padding: 20px 40px;
 }
 
 .main {
